--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Form from "../components/Form.astro";
+const formKey = import.meta.env.FORM_KEY;
 ---
 
 <Layout title="Contact us" >
@@ -8,7 +9,7 @@ import Form from "../components/Form.astro";
       <h2 class="text-darktan text-3xl text-center font-bold">Send us a message</h2>
     <div class=" container grid lg:grid-cols-2  m-auto">
      
-      <Form />
+      <Form formKey={formKey} />
       
        <div class="lg:w-2/3 col-span-1 bg-tan  lg:h-8/12  p-6 text-xl m-auto">
          <p>We are conveniently located within 2 miles of CSU, and Old Town. There is direct access to the Poudre Trail and close access to Lory State Park and Reservoir Ridge.</p>
