--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import Logo from "../../public/images/taft-hill-acres-logo.png";
 ---
 
 <header class="p-2">
-  <nav class="h-50">
+  <nav class="h-50 sticky top-0 z-50 bg-white ">
     <Hamburger />
     <Navigation />
   </nav>
