--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -66,16 +66,16 @@ const about = result && result.data ? {
 ---
 
 <Layout title="Taft Hill Acres | About">
-  <div class="text-center h-full w-full md:h-3/4 md:w-3/4 m-auto my-8">
+  <div class="container mx-auto mt-8">
     <div class="m-auto text-center">
-      <h1 class="lg:w-5/6 bg-darktan text-4xl text-white p-6 m-auto">About Taft Hill Acres</h1>
+     <h1 class="text-darktan text-5xl text-center my-8 font-extrabold uppercase">About Taft Hill Acres</h1>
       {about.mainImage && (
         <img
-          class="z-10 object-cover w-full lg:w-5/6 m-auto"
-          src={urlFor((about.mainImage as any).asset).url()}
-          alt="Bridge with barn and arena in the background"
+          class="z-10 object-cover w-full lg:w-3/4 m-auto"
+          src={urlFor(about.mainImage).url()}
+          alt="About Taft Hill Acres"
         />
-      ) }
+      )}
     </div>
     <div class="lg:w-3/4 bg-darktan mx-auto p-4 lg:p-12">
       <h2 class="text-left text-black font-extrabold text-4xl">{about.subtitle}</h2>
