--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -25,9 +25,9 @@ interface Thanks {
   const result: Thanks[] = response.data;
 ---
 <Layout title="Thank you from Taft Hill Acres | Fort Collins Boarding Facility">
-  <div class="flex text-center justify-center mt-32 lg:mt-0"> 
-    <div class="w-full -mt-24 lg:mt-0 lg:w-1/2 lg:h-1/2  bg-tan p-8">
-      <h2 class="text-green text-5xl text-center mb-4">{result[0]?.title}</h2>
+  <div class="container mx-auto"> 
+    <div class="bg-tan text-center p-8">
+      <h2 class="text-green text-5xl  mb-4">{result[0]?.title}</h2>
       <h3 class="text-darktan text-2xl">{result[0]?.subtitle}</h3>
       <img class="lg:w-1/2 mx-auto" src={urlFor((result[0]?.mainImage as any).asset).url()} alt={result[0]?.title} />
        </div>
