--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,19 +1,15 @@
 ---
 import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
-import { Image } from 'astro:assets';
-import Logo from "../../public/images/taft-hill-acres-logo.png";
+
 ---
 
-<header class="p-2">
-  <nav class="h-50 sticky top-0 z-50 bg-white ">
+<header class=" lg:sticky lg:top-0 z-50">
+  <nav class="bg-white ">
+  <div class="container mx-auto p-4">
     <Hamburger />
     <Navigation />
+  </div>
   </nav>
-  <Image
-    src={Logo}
-    alt="Taft Hill Acres logo"
-    class="max-w-[550px] w-1/2 lg:w-1/3 m-auto"
-    loading={"eager"}
-  />
+  
 </header>
