--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ import Header from "../components/Header.astro";
 import "../styles/global.css";
 import Footer from "../components/Footer.astro";
 // import {VisualEditing} from '@sanity/astro/visual-editing'
+import { Image } from 'astro:assets';
+import Logo from "../../public/images/taft-hill-acres-logo.png";
 
 const { title } = Astro.props;
 // const visualEditingEnabled = import.meta.env.PUBLIC_SANITY_VISUAL_EDITING_ENABLED == 'true'
@@ -32,6 +34,12 @@ const { title } = Astro.props;
   <body class="max-w-[1400px] mx-auto">
     <div>
       <Header />
+      <Image
+    src={Logo}
+    alt="Taft Hill Acres logo"
+    class="max-w-[550px] w-1/2 lg:w-1/3 m-auto"
+    loading={"eager"}
+  />
       <main>
         <slot />
         <!-- <VisualEditing enabled={visualEditingEnabled} zIndex={1000} /> -->
