--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -25,7 +25,7 @@ interface Thanks {
   const result: Thanks[] = response.data;
 ---
 <Layout title="Thank you from Taft Hill Acres | Fort Collins Boarding Facility">
-  <div class="container mx-auto"> 
+  <div class="container mx-auto  mt-8"> 
     <div class="bg-tan text-center p-8">
       <h2 class="text-green text-5xl  mb-4">{result[0]?.title}</h2>
       <h3 class="text-darktan text-2xl">{result[0]?.subtitle}</h3>
