--- a/src/pages/training.astro
+++ b/src/pages/training.astro
@@ -57,7 +57,7 @@ const trainingDescription: TrainerDescription | null = trainingDescriptionResult
 ---
 
 <Layout title="Training at Taft Hill Acres | Fort Collins Boarding Facility">
-<div class="container mx-auto">
+<div class="container mx-auto  mt-8">
   <h1 class="text-darktan text-5xl text-center my-8 font-extrabold uppercase">Our Trainers</h1>
   <section class="lg:w-3/4 flex flex-col lg:flex-row lg:justify-center mx-auto text-center  my-6">  
     {
